k8s/todo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-depl
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      containers:
      - name: todo
        image: todo
        imagePullPolicy: Never
        ports:
        - containerPort: 8082
          name: grpc
        - containerPort: 8080
          name: http
---
# Internal service
apiVersion: v1
kind: Service
metadata:
  name: todo-service
spec:
  type: ClusterIP
  selector:
    app: todo
  ports:
  - port: 8082
    targetPort: 8082
    name: grpc
  - port: 8080
    targetPort: 8080
    name: http

# External service
# apiVersion: v1
# kind: Service
# metadata:
#   name: todo-service
# spec:
#   selector:
#     app: todo
#   type: LoadBalancer
#   ports:
#   - protocol: TCP
#     port: 8082
#     targetPort: 8082
#     nodePort: 30000
---
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
  name: todo-ingress
  labels:
      name: todo-ingress
spec:
  rules:
  - host: todo.com
    http:
      paths:
      - pathType: "Prefix"
        path: "/" 
        backend:
          service:
            name: todo-service
            port:
              number: 8082
  - host: todohttp.com
    http:
      paths:
        - pathType: "Prefix"
          path: "/"
          backend:
            service:
              name: todo-service
              port:
                number: 8080
  tls:
    - secretName: todo-tls
      hosts:
        - todo.com
